tests/sksl/errors/VoidInStruct.glsl
### Compilation failed:

error: 5: type 'void' may not be used in an array
error: 6: type 'void' may not be used in an array
error: 7: type 'void' may not be used in an array
error: 4: type 'void' is not permitted in a struct
4 errors
